--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -225,8 +225,7 @@
 <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- USER MANUAL / HELP -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
     <input type="checkbox" id="helpCheckBox">
     <label class="help-container"  for="helpCheckBox" >
-        <label class="button helpIconButton hoverableButton" for="helpCheckBox" data-toggle="tooltip" data-bs-placement="left" data-bs-offset="0,7"
-        title="Help">
+        <label class="button helpIconButton hoverableButton" for="helpCheckBox" >
         <h5 class="text-white fw-bold textShadow rotateText">HELP</h5>
         </label>
         <ul class="helpOptions">
