--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -1521,7 +1521,9 @@ html {
 
 /* USER MANUAL/HELP BUTTON STYLING */
 .rotateText{
-  transform: rotate(-90deg);
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  letter-spacing: -10px;
 }
 
 #helpCheckBox{
@@ -1543,19 +1545,19 @@ html {
 
 .helpIconButton{
   justify-content: center;
-  padding:15px;
+  padding:15px 15px 15px 15px;
   display: flex;
   width:100%;
-  height:85px;
+  height:100px;
   background:#188045;
-  border-radius: 20px 0px 0px 20px ;
+  border-radius: 13px 0px 0px 13px ;
   cursor:pointer;
   box-shadow: 8px 5px 5px #555555;
   text-align: center;
   align-items:center;
   animation-duration:3s;
   animation-name:animateHelpButton;
-  animation-iteration-count: 99;
+  animation-iteration-count: 999999;
   
 }
 
@@ -1564,16 +1566,16 @@ html {
     transform:  translate3d(0,0,0);
   }
   20%{
-    transform: translate3d(-3px,0,0); 
+    transform: translate3d(-4px,0,0); 
   }
   40%{
     transform: translate3d(0px,0,0);
   }
   60%{
-    transform: translate3d(-3px,0,0);
+    transform: translate3d(-4px,0,0);
   }
   80%{
-    transform: translate3d(-1px,0,0); 
+    transform: translate3d(-2px,0,0); 
   }
   100%{
     transform:  translate3d(0,0,0);
@@ -1658,7 +1660,7 @@ html {
   }
 
   .helpIconButton{
-    height: 70px;
+    height: 90px;
     text-align: center;
   }
   
@@ -1691,5 +1693,10 @@ html {
     bottom:40vh;
     right:0px;
     cursor:pointer;
+  }
+  .rotateText{
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    letter-spacing: -6px;
   }
 }
